# MIRA

./: .gitignore  GEMINI.md  NEXT_STEPS.md  README.md
.github/workflows/: build.yml
Mira/: AppDelegate.swift  AppState.swift  ContentView.swift  DrawingSurfaceRepresentable.swift  DrawingSurfaceView.swift  MiraApp.swift  Models.swift  OverlayRootView.swift  OverlayWindowController.swift  ShortcutManager.swift  ToolbarView.swift  ToolbarWindowController.swift  WindowLevels.swift
Mira.xcodeproj/: project.pbxproj
Mira.xcodeproj/xcuserdata/pcsantos.xcuserdatad/xcschemes/: xcschememanagement.plist
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src/components/: Canvas.tsx  Toolbar.tsx
src/hooks/: useDrawing.ts
