[package]
name = "Mira"
version = "0.2.0"
description = "Mira: lightweight screen annotation overlay for live presentations"
authors = ["Pedro Santos"]
homepage = "https://github.com/p-c-g-s/MIRA"
repository = "https://github.com/p-c-g-s/MIRA"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Mira"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSGraphics"] }
